--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-paper": "^4.12.4",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
