--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-element-dropdown": "^2.3.0",
     "react-native-paper": "^4.12.4",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.1.2",
